fixing shifted text

--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -1,1 +1,1 @@
-#u464{background-color:#141414;}#u162{border-color:transparent;border-width:0px;background-color:transparent;}
+#u464{background-color:#141414;}#u162{border-width:0px;background-color:transparent;border-color:transparent;}
